Closed Bug 1205083 Opened 10 years ago Closed 10 years ago

crash in msmpeg2vdec.dll@0x25a487

Categories

(Core :: Audio/Video: Playback, defect, P1)

43 Branch
x86_64
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox41 --- wontfix
firefox42 + verified
firefox43 --- verified
firefox44 --- verified
firefox45 --- affected
firefox46 --- affected

People

(Reporter: alex_mayorga, Assigned: cpearce)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 2 obsolete files)

This bug was filed from the Socorro interface and is report bp-9c88a2fa-f2ef-43a8-ab38-a1eaf2150915. ============================================================= Seemingly a 64-bit startup crash per https://crash-stats.mozilla.com/report/list?product=Firefox&range_unit=days&range_value=28&signature=msmpeg2vdec.dll%400x25a487#tab-reports Pestered me a bit upon Nightly not closing out properly due to https://bugzilla.mozilla.org/show_bug.cgi?id=1205032 Crashing Thread Frame Module Signature Source Ø 0 msmpeg2vdec.dll msmpeg2vdec.dll@0x25a487 1 ntdll.dll RtlpLookupDynamicFunctionEntry
Guessing component from dll name.
Component: Audio/Video: MSG/cubeb/GMP → Audio/Video: Playback
Assignee: nobody → cpearce
Seems mostly Win 7 SP1 with msmpeg2vdec.dll version 12.0.9200.17037. We may need to blacklist this version.
msmpeg2vdec 12.0.9200.17037 is the latest version that ships on Win7 SP1. We can't blacklist it.
I don't get this crash in 41.0.1. :D
Last good Nightly: 2015-08-07-03-02-10 First bad Nightly: 2015-08-08-03-02-07 Range: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=91de9c670800&tochange=943b79d9c65f
Low latency video decoding causes crashes on Win 7, for example in this video: https://sec.ch9.ms/sessions/build/2015/2-692-mobile.mp4 I don't know what's special about this file. So don't engage low latency video decoding on Win 7. Note: all the crash reports on file are for Win 7, so I suspect this is the root cause. We'll need this uplifted.
Flags: needinfo?(cpearce)
Attachment #8676508 - Flags: review?(jyavenard)
Attachment #8676508 - Attachment is obsolete: true
Attachment #8676508 - Flags: review?(jyavenard)
There are also crash reports on x86 Win8: https://crash-stats.mozilla.com/report/list?product=Firefox&range_unit=days&range_value=28&signature=msmpeg2vdec.dll%400xf793b#tab-reports These coincide with enabling low latency decoding, so I think we should just remove it totally.
Depends on: 1141139
Other crashes in msmpeg2vdec.dll. https://crash-stats.mozilla.com/search/?product=Firefox&signature=~msmpeg2vdec&_facets=signature&_columns=date&_columns=signature&_columns=product&_columns=version&_columns=build_id&_columns=platform#facet-signature Many occurred since low latency decoding was enabled in 42, but there are some as far back as 38. They become more concentrated since low latency decoding was enabled however.
Comment on attachment 8676514 [details] [diff] [review] Patch: Don't engage low latency video decoding on Windows Review of attachment 8676514 [details] [diff] [review]: ----------------------------------------------------------------- If we disable low-latency, we need to disable many of the W3C and mediasource mochitest. So this patch alone isn't sufficient and will likely get backed out. I also seriously doubt this is the cause of the problems seeing that low-latency is enable in many of the video players I looked at, including chrome.
Attachment #8676514 - Flags: review?(jyavenard) → review+
(In reply to Jean-Yves Avenard [:jya] from comment #12) > I also seriously doubt this is the cause of the problems seeing that > low-latency is enable in many of the video players I looked at, including > chrome. This fixes the crash on my Win7 laptop.
Web platform test media-source/mediasource-append-buffer.html | Test appendBuffer is failing, so disable it, and add pref as requested. https://treeherder.mozilla.org/#/jobs?repo=try&revision=94fda5872068
Attachment #8676648 - Flags: review?(jyavenard)
Comment on attachment 8676648 [details] [diff] [review] Patch v2: Don't engage low latency video decoding on Windows Review of attachment 8676648 [details] [diff] [review]: ----------------------------------------------------------------- ::: testing/web-platform/meta/media-source/mediasource-append-buffer.html.ini @@ +1,5 @@ > [mediasource-append-buffer.html] > type: testharness > prefs: [media.mediasource.enabled:true] > disabled: > + if (os == "linux") or (os == "win"): https://bugzilla.mozilla.org/show_bug.cgi?id=1191138, https://bugzilla.mozilla.org/show_bug.cgi?id=1191138 do you need the URL twice??
Attachment #8676648 - Flags: review?(jyavenard) → review+
Crash, tracking. Chris, could you fill the uplift request to aurora & beta? Thanks
Attachment #8676514 - Attachment is obsolete: true
Comment on attachment 8676648 [details] [diff] [review] Patch v2: Don't engage low latency video decoding on Windows Approval Request Comment [Feature/regressing bug #]: Media Source Extensions / Video playback [User impact if declined]: Some users will experience crashes on videos with some unknown characteristic. [Describe test coverage new/current, TreeHerder]: We have lots of media mochitests. [Risks and why]: There's a chance this could cause playback stalls on YouTube, particularly when seeking, so we should get SoftVision to test YouTube thoroughly. [String/UUID change made/needed]:
Attachment #8676648 - Flags: approval-mozilla-beta?
Attachment #8676648 - Flags: approval-mozilla-aurora?
(In reply to Chris Pearce (:cpearce) from comment #18) > Comment on attachment 8676648 [details] [diff] [review] > [Risks and why]: There's a chance this could cause playback stalls on > YouTube, particularly when seeking, so we should get SoftVision to test > YouTube thoroughly. Also note that this only affects Windows Vista and later. > [String/UUID change made/needed]: None!
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment on attachment 8676648 [details] [diff] [review] Patch v2: Don't engage low latency video decoding on Windows We are at the end of the beta cycle (go to build of beta 9 today), as this patch could cause regression in Youtube, I am rejecting this uplift (crash sucks but at least we know where we are)
Attachment #8676648 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
I'm now in the opinion that this patch can't cause regression in YouTube, I had informed cpearce that it could have, but upon further testing it is fine. The worse case that could have happened was a longer stall when seeking, I fail to see how this is a better outcome than crashing...
Comment on attachment 8676648 [details] [diff] [review] Patch v2: Don't engage low latency video decoding on Windows OK, let's uplift this to aurora in hopes of bringing down the crash rate.
Attachment #8676648 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Let's please re-evaluate the uplift in the light of bug 1219319 and the fact that it looks like the patch here fixes all those signatures.
We've opted to keep the crash (rather than reverting it) that affects all HTML5 video playback rather than asking YouTube to fix a bug in their player that we don't even know (or even still suspect) exists. Sylvestre - I recommend we uplift the fix. Are you prepared to reconsider?
Flags: needinfo?(sledru)
Comment on attachment 8676648 [details] [diff] [review] Patch v2: Don't engage low latency video decoding on Windows [Triage Comment] OK, this is a driver for a RC2, taking it. We want youtube in good shape
Flags: needinfo?(sledru)
Attachment #8676648 - Flags: approval-mozilla-beta- → approval-mozilla-release+
Flags: qe-verify+
We tested on Firefox 42 RC Build 2 (buildID: 20151029151421) and the crash doesn't occurred anymore.
Flags: needinfo?(cpearce)
I've tested on Windows 7 64bit using latest Aurora 44.0a2 (buildID: 20151207004009) and Firefox 43 Beta 9 (buildID: 20151203163240 ) - build arch: 64bit and 32bit and the crash doesn't occured anymore. I saw on the reports (https://crash-stats.mozilla.com/report/list?product=Firefox&signature=msmpeg2vdec.dll%400x25a487#tab-reports) that Nightly 45.0a1 is also affected. I tried to reproduce the issue on latest Nightly 45.0a1, but without success.
Flags: needinfo?(cpearce)
Sry not fixed in Firefox 44beta4 with e10s enabled(enable in settings) Crash report Signature msmpeg2vdec.dll@0x102f62 https://crash-stats.mozilla.com/report/index/e5cc79ad-1db0-4e2c-9451-f7a1a2160104 My settings e10s with sandbox: browser.displayedE10SNotice;4 browser.tabs.remote;true browser.tabs.remote.autostart;false browser.tabs.remote.autostart.1;false browser.tabs.remote.autostart.2;true browser.tabs.remote.disabled-for-a11y;false browser.tabs.remote.sandbox;on dom.ipc.plugins.flash.disable-protected-mode;true dom.ipc.plugins.sandbox-level.default;1 dom.ipc.plugins.sandbox-level.flash;2 security.sandbox.windows.content.moreStrict;true security.sandbox.windows.log.stackTraceDepth;1
63 crashes in the last 28 days (mostly 45a1/46a1); all win7 x64 it appears. I infer they're all e10s, but didn't really verify that.
mkdante381@gmail.com: Can your reproduce this crash reliably? Are you able to comment here with a link to a video which you crash on? I cannot reproduce the crash, which makes it difficult to fix this.
Flags: needinfo?(cpearce) → needinfo?(mkdante381)
Sry maybe my bad. Preference "media.wmf.low-latency.enabled" was true. Now I change to false. I must test this.
Flags: needinfo?(mkdante381)
I couldn't reproduce the crash on Win 7 64-bit. There are over 50 crashes after the fix landed in 45.0a1 and 46.0a1. Shouldn't those be tracked separately in a new bug?
(In reply to Petruta Rasa [QA] [:petruta] from comment #39) > I couldn't reproduce the crash on Win 7 64-bit. > There are over 50 crashes after the fix landed in 45.0a1 and 46.0a1. > Shouldn't those be tracked separately in a new bug? Yes.
See Also: → 1242343
See Also: → 1395887
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: