Bug 1205083 - Don't enable low latency WMF video decoding as it crashes sometimes. r=jya